infra/k8s/minio-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-depl
spec:
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio
          args:
            - server
            - /data
            - --console-address
            - :9001
          ports:
            - containerPort: 9000
            - containerPort: 9001
          resources:
            limits:
              memory: "1Gi"
              cpu: "1.0"

---
apiVersion: v1
kind: Service
metadata:
  name: minio-srv
spec:
  selector:
    app: minio
  ports:
    - name: minio
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: management
      protocol: TCP
      port: 9001
      targetPort: 9001
