infra/k8s/profiles-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles-depl
spec:
  selector:
    matchLabels:
      app: profiles
  template:
    metadata:
      labels:
        app: profiles
    spec:
      containers:
        - name: profiles
          image: linkloop.dev:9999/profiles
          resources:
            limits:
              memory: "1Gi"
              cpu: "1.0"

---
apiVersion: v1
kind: Service
metadata:
  name: profiles-srv
spec:
  selector:
    app: profiles
  ports:
    - name: profiles
      protocol: TCP
      port: 3000
      targetPort: 3000
