infra/k8s/profiles-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles-mongo-depl
spec:
  selector:
    matchLabels:
      app: profiles-mongo
  template:
    metadata:
      labels:
        app: profiles-mongo
    spec:
      containers:
      - name: profiles-mongo
        image: mongo
        resources:
          limits:
            memory: "1Gi"
            cpu: "1.0"

---
apiVersion: v1
kind: Service
metadata:
  name: profiles-mongo-srv
spec:
  selector:
    app: profiles-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
