infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: ingress-service
spec:
  rules:
    - host: linkloop.dev
      http:
        paths:
          - pathType: Prefix
            path: "/api/auth/?(.*)"
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: "/api/profile/?(.*)"
            backend:
              service:
                name: profiles-srv
                port:
                  number: 3000
    - host: amqp.linkloop.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rabbitmq-srv
                port:
                  number: 15672
    - host: minio.linkloop.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio-srv
                port:
                  number: 9000
    - host: minio-console.linkloop.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio-srv
                port:
                  number: 9001
